--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@hookform/resolvers": "^5.1.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.517.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
