--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@hookform/resolvers": "^5.1.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
+    "ai": "^4.3.16",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.517.0",
     "next": "15.3.3",
+    "openai": "^5.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
